[package]
name = "lophat-web"
version = "0.1.0"
authors = ["Thomas Chaplin <tomrchaplin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# Not comptaible with LoPHAT ATM (get index out of bounds errors)
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

lophat = { version = "0.8.1" , default-features=false}
wasm-bindgen-rayon = "1.0.3"
rayon = "1.7.0"
js-sys = "0.3.61"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

